# solana-spl-token

./: Anchor.toml  package.json  pnpm-lock.yaml
.github/workflows/: test-solana-contract.yml
lib/: index.ts
programs/boilerplate/: Cargo.toml
programs/boilerplate/src/: lib.rs
programs/toastcoin/: Cargo.toml
programs/toastcoin/src/: lib.rs
scripts/: setupConfigAndWallet.ts
tests/: boilerplate.ts  toastcoin.ts
