[package]
name = "toastcoin"
version = "0.1.0"
description = "Boilerplate Solana contract with sample method."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "toastcoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"